--- a/app/templates/friends/-form.hbs
+++ b/app/templates/friends/-form.hbs
@@ -1,4 +1,5 @@
-<form>
+<form {{action "save" on="submit"}}>
+  <h2>{{errorMessage}}</h2>
   <p>
     <label>First Name:
       {{input value=model.firstName}}
@@ -22,3 +23,8 @@
   <input type="submit" value="Save" />
   <button {{action "cancel"}}>Cancel</button>
 </form>
+<div>
+  <h2>Friend details</h2>
+  <p>{{model.firstName}}</p>
+  <p>{{model.lastName}}</p>
+</div>
