--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -4,3 +4,4 @@
   <li>Email: {{model.email}}</li>
   <li>twitter: {{model.twitter}}</li>
 </ul>
+<ul>{{link-to 'back to index' 'friends.index'}}</ul>
