--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -3,5 +3,6 @@
   <li>Last Name: {{model.lastName}}</li>
   <li>Email: {{model.email}}</li>
   <li>twitter: {{model.twitter}}</li>
+  <li>{{link-to "Edit info" "friends.edit" model}}</li>
 </ul>
 <ul>{{link-to 'back to index' 'friends.index'}}</ul>
