--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -4,5 +4,6 @@
   <li>Email: {{model.email}}</li>
   <li>twitter: {{model.twitter}}</li>
   <li>{{link-to "Edit info" "friends.edit" model}}</li>
+  <li><a href="#" {{action "delete" friend}}>Delete</a></li>
 </ul>
 <ul>{{link-to 'back to index' 'friends.index'}}</ul>
